--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^9.13.3",
+    "react-native-webview": "^11.23.1",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
