--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@sanity/client": "^3.3.5",
     "@sanity/image-url": "^1.0.1",
     "expo": "~46.0.9",
@@ -22,6 +23,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^9.13.3",
     "react-native-webview": "^11.23.1",
+    "react-redux": "^8.0.2",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
