--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-heroicons": "^3.0.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^9.13.3",
